BFF Person, Person Unit Test
